build: Fixes for linux distributable.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "ark",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "main": "./build/renderer/main.js",
   "scripts": {
     "start": "BROWSER=none ARK_ENTRY_URL=http://localhost:8080 concurrently \"react-scripts start\" \"sleep 5 && electron .\"",
     "build:electron": "tsc --build tsconfig.renderer.json -w",
     "build:electron:prod": "tsc --build tsconfig.renderer.json",
-    "build": "react-scripts build",
+    "build:react:prod": "react-scriptseslint build",
+    "build": "rimraf build && npm run build:react:prod && npm run build:electron:prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "pack": "electron-builder --dir",
@@ -16,6 +18,9 @@
     "dist:windows": "electron-builder --windows"
   },
   "eslintConfig": {
+    "ignorePatterns": [
+      "electron"
+    ],
     "extends": [
       "react-app",
       "react-app/jest"
@@ -36,12 +41,15 @@
   "build": {
     "productName": "Ark",
     "appId": "dev.wheredevs.Ark",
+    "extends": null,
     "files": [
-      "dist/",
-      "node_modules/",
-      "public/index.html",
+      "build/**/*",
       "package.json"
     ],
+    "directories": {
+      "buildResources": "public",
+      "output": "release"
+    },
     "mac": {
       "target": [
         "dmg"
@@ -75,11 +83,6 @@
       ],
       "category": "Development"
     },
-    "directories": {
-      "app": ".",
-      "buildResources": "assets",
-      "output": "release"
-    },
     "extraResources": [
       "./assets/**"
     ],
@@ -90,6 +93,8 @@
     }
   },
   "devDependencies": {
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -97,17 +102,16 @@
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2",
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/icons": "^4.11.2",
     "concurrently": "^6.2.0",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
     "node-pty": "^0.10.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.3.5",
+    "web-vitals": "^1.1.2",
     "xterm": "^4.13.0"
   }
 }
