--- a/tsconfig.renderer.json
+++ b/tsconfig.renderer.json
@@ -7,7 +7,7 @@
         "strict": true,
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true,
+        "isolatedModules": true
     },
     "include": [
         "electron"
