--- a/package.json
+++ b/package.json
@@ -113,5 +113,8 @@
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2",
     "xterm": "^4.13.0"
+  },
+  "dependencies": {
+    "@monaco-editor/react": "^4.2.1"
   }
 }
