--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "concurrently": "^6.2.0",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
+    "monaco-editor": "^0.26.1",
     "node-pty": "^0.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
