feat(shell): Executor & collection name completions. * Added shell-executor.ts module which can help eval JS using bin/mongosh (gitignore because >100mb). * Added completions for provided collections to Shell.tsx component.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "BROWSER=none ARK_ENTRY_URL=http://localhost:8080 concurrently \"react-scripts start\" \"sleep 5 && electron .\"",
     "build:electron": "tsc --build tsconfig.renderer.json -w",
     "build:electron:prod": "tsc --build tsconfig.renderer.json",
-    "build:react:prod": "react-scriptseslint build",
+    "build:react:prod": "react-scripts build",
     "build": "rimraf build && npm run build:react:prod && npm run build:electron:prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -84,7 +84,7 @@
       "category": "Development"
     },
     "extraResources": [
-      "./assets/**"
+      "./bin/**"
     ],
     "publish": {
       "provider": "github",
