--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "homepage": "./",
   "main": "./build/renderer/main.js",
   "scripts": {
-    "start": "BROWSER=none ARK_ENTRY_URL=http://localhost:8080 concurrently \"react-scripts start\" \"sleep 5 && electron .\"",
+    "start": "BROWSER=none ARK_ENTRY_URL=http://localhost:3000 concurrently \"vite\" \"sleep 2 && electron .\"",
     "build:electron": "tsc --build tsconfig.renderer.json -w",
     "build:electron:prod": "tsc --build tsconfig.renderer.json",
-    "build:react:prod": "react-scripts build",
+    "build:react:prod": "vite build",
+    "serve": "vite preview",
     "build": "rimraf build && npm run build:react:prod && npm run build:electron:prod",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "pack": "electron-builder --dir",
     "dist:macos": "electron-builder --macos",
     "dist:linux": "electron-builder --linux",
@@ -102,6 +101,7 @@
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "concurrently": "^6.2.0",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
@@ -109,11 +109,12 @@
     "node-pty": "^0.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "rimraf": "^3.0.2",
+    "sass": "^1.35.2",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2",
-    "xterm": "^4.13.0"
+    "vite": "^2.3.2",
+    "vite-plugin-svgr": "^0.3.0",
+    "web-vitals": "^1.1.2"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.2.1",
