--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     }
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -102,15 +103,16 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "antd": "^4.16.8",
     "concurrently": "^6.2.0",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
+    "less": "^4.1.1",
     "monaco-editor": "^0.26.1",
     "node-pty": "^0.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "sass": "^1.35.2",
     "typescript": "^4.3.5",
     "vite": "^2.3.2",
     "vite-plugin-svgr": "^0.3.0",
