--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.2.1",
+    "electron-store": "^8.0.0",
     "mongodb": "^4.0.1"
   }
 }
