--- a/tsconfig.renderer.json
+++ b/tsconfig.renderer.json
@@ -1,17 +1,15 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "outDir": "./build/renderer",
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "strict": true,
-        "sourceMap": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "sourceMap": true
-    },
-    "include": [
-        "electron"
-    ]
+	"compilerOptions": {
+		"target": "es5",
+		"outDir": "./build/renderer",
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"strict": true,
+		"sourceMap": true,
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true
+		// "noEmit": false
+	},
+	"include": ["electron"]
 }
