--- a/package.json
+++ b/package.json
@@ -16,15 +16,6 @@
 		"dist:linux": "electron-builder --linux",
 		"dist:windows": "electron-builder --windows"
 	},
-	"eslintConfig": {
-		"ignorePatterns": [
-			"electron"
-		],
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
 	"browserslist": {
 		"production": [
 			">0.2%",
@@ -93,6 +84,7 @@
 	},
 	"devDependencies": {
 		"@ant-design/icons": "^4.6.2",
+		"@monaco-editor/react": "^4.2.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
@@ -100,23 +92,34 @@
 		"@types/node": "^12.20.16",
 		"@types/react": "^17.0.14",
 		"@types/react-dom": "^17.0.9",
+		"@typescript-eslint/eslint-plugin": "^4.28.4",
+		"@typescript-eslint/parser": "^4.28.4",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"antd": "^4.16.8",
 		"concurrently": "^6.2.0",
 		"electron": "^13.1.7",
 		"electron-builder": "^22.11.7",
-		"less": "^4.1.1",
+		"eslint": "^7.31.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-react": "^7.24.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"less": "3.0.0",
+		"less-vars-to-js": "^1.3.0",
 		"monaco-editor": "^0.26.1",
+		"mongodb": "^4.0.1",
+		"nanoid": "^3.1.23",
+		"prettier": "^2.3.2",
 		"re-resizable": "^6.9.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.3.5",
 		"vite": "^2.3.2",
+		"vite-plugin-eslint": "^1.3.0",
 		"vite-plugin-svgr": "^0.3.0",
-		"web-vitals": "^1.1.2",
-		"@monaco-editor/react": "^4.2.1",
-		"mongodb": "^4.0.1"
+		"web-vitals": "^1.1.2"
 	},
 	"dependencies": {}
 }
