refator: Moved around files and refactored the entry point and some modules.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,8 @@
     ],
     "env": {
         "browser": true
+    },
+    "rules": {
+        "@typescript-eslint/no-empty-function": "warn"
     }
 }
