--- a/package.json
+++ b/package.json
@@ -118,8 +118,7 @@
 		"typescript": "^4.3.5",
 		"vite": "^2.3.2",
 		"vite-plugin-eslint": "^1.3.0",
-		"vite-plugin-svgr": "^0.3.0",
-		"web-vitals": "^1.1.2"
+		"vite-plugin-svgr": "^0.3.0"
 	},
 	"dependencies": {}
 }
