--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
+		"@types/electron-json-storage": "^4.5.0",
 		"@types/jest": "^26.0.24",
 		"@types/node": "^12.20.16",
 		"@types/react": "^17.0.14",
@@ -120,5 +121,7 @@
 		"vite-plugin-eslint": "^1.3.0",
 		"vite-plugin-svgr": "^0.3.0"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"electron-json-storage": "^4.5.0"
+	}
 }
