--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
 		"re-resizable": "^6.9.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.2.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.3.5",
 		"vite": "^2.3.2",
