--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,30 @@
 {
 	"compilerOptions": {
-		"target": "ESNext",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"types": ["vite/client", "vite-plugin-svgr/client"],
-		"allowJs": false,
-		"skipLibCheck": false,
-		"esModuleInterop": false,
-		"allowSyntheticDefaultImports": true,
+		"lib": [
+			"dom",
+			"dom.iterable",
+			"esnext"
+		],
+		"types": [
+			"vite/client",
+			"vite-plugin-svgr/client"
+		],
+		"target": "es2020",
+		"module": "commonjs",
 		"strict": true,
-		"forceConsistentCasingInFileNames": true,
-		"noFallthroughCasesInSwitch": true,
-		"module": "esnext",
+		"sourceMap": true,
+		"declaration": true,
+		"noErrorTruncation": true,
+		"esModuleInterop": true,
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
-		"isolatedModules": true,
-		// "noEmit": true,
-		"jsx": "react-jsx"
+		"jsx": "react"
 	},
-	"include": ["src", "./global.d.ts"]
+	"include": [
+		"src",
+		"./global.d.ts"
+	],
+	"exclude": [
+		"node_modules"
+	]
 }
