feat(editor): Working shell execution with JSONViewer.

--- a/src/json-stubs/shell-config.json
+++ b/src/json-stubs/shell-config.json
@@ -1,9 +1,11 @@
 {
-	"db": "test_db_1",
+	"uri": "mongodb://localhost:27017",
+	"db": "klenty_test_2622",
 	"hosts": [
 		"ec2-3-13-197-203.us-east-2.compute.amazonaws.com",
 		"ec2-3-13-197-203.us-east-2.compute.amazonaws.com"
 	],
-	"user": "dbuser",
-	"collection": "Users"
+	"user": "test",
+	"password": "test",
+	"collection": "userdetails"
 }
