--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
+		"@types/defaults": "^1.0.3",
 		"@types/electron-json-storage": "^4.5.0",
 		"@types/jest": "^26.0.24",
 		"@types/node": "^12.20.16",
@@ -98,6 +99,7 @@
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"antd": "^4.16.8",
 		"concurrently": "^6.2.0",
+		"defaults": "^1.0.3",
 		"electron": "^13.1.7",
 		"electron-builder": "^22.11.7",
 		"eslint": "^7.31.0",
