feat(contextBridge): Added `.driver` along with typings in global.d.ts. build: Changes to tsconfig location for electron. Makes it more vscode friendly.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "ignorePatterns": [
-        "electron"
+        "electron",
+        "build"
     ],
     "extends": [
         "eslint:recommended",
