--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
 		"esModuleInterop": true,
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
-		"jsx": "react"
+		"jsx": "react",
+		"noImplicitAny": false
 	},
 	"include": [
 		"src",
