feat(Editor): Code evaluation using mongosh libraries.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
         "browser": true
     },
     "rules": {
-        "@typescript-eslint/no-empty-function": "warn"
+        "@typescript-eslint/no-empty-function": "warn",
+        "react/prop-types": "off"
     }
 }
