--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
 		"appId": "dev.wheredevs.Ark",
 		"extends": null,
 		"files": [
-			"build/**/*",
-			"package.json"
+			"./build/**/*",
+			{
+				"from": "./public/mongoshell.d.ts",
+				"to": "build/mongoshell.d.ts"
+			}
 		],
 		"directories": {
-			"buildResources": "public",
-			"output": "release"
+			"output": "release/",
+			"app": "./"
 		},
 		"mac": {
 			"target": [
@@ -74,7 +77,7 @@
 			"category": "Development"
 		},
 		"extraResources": [
-			"./bin/**"
+			"./node_modules/**/*"
 		],
 		"publish": {
 			"provider": "github",
@@ -83,6 +86,24 @@
 		}
 	},
 	"devDependencies": {
+		"electron": "^13.1.7",
+		"electron-builder": "^22.11.7",
+		"eslint": "^7.31.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-react": "^7.24.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"less": "3.0.0",
+		"less-vars-to-js": "^1.3.0",
+		"@typescript-eslint/eslint-plugin": "^4.28.4",
+		"@typescript-eslint/parser": "^4.28.4",
+		"@vitejs/plugin-react-refresh": "^1.3.1",
+		"vite": "^2.3.2",
+		"vite-plugin-eslint": "^1.3.0",
+		"vite-plugin-svgr": "^0.3.0"
+	},
+	"dependencies": {
 		"@ant-design/icons": "^4.6.2",
 		"@monaco-editor/react": "^4.2.1",
 		"@testing-library/jest-dom": "^5.14.1",
@@ -94,25 +115,10 @@
 		"@types/node": "^12.20.16",
 		"@types/react": "^17.0.14",
 		"@types/react-dom": "^17.0.9",
-		"@typescript-eslint/eslint-plugin": "^4.28.4",
-		"@typescript-eslint/parser": "^4.28.4",
-		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"antd": "^4.16.8",
 		"concurrently": "^6.2.0",
 		"defaults": "^1.0.3",
-		"electron": "^13.1.7",
-		"electron-builder": "^22.11.7",
-		"eslint": "^7.31.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-import": "^2.23.4",
-		"eslint-plugin-prettier": "^3.4.0",
-		"eslint-plugin-react": "^7.24.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"less": "3.0.0",
-		"less-vars-to-js": "^1.3.0",
 		"monaco-editor": "^0.26.1",
-		"mongodb": "^4.0.1",
-		"nanoid": "^3.1.23",
 		"prettier": "^2.3.2",
 		"re-resizable": "^6.9.0",
 		"react": "^17.0.2",
@@ -120,14 +126,11 @@
 		"react-icons": "^4.2.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.3.5",
-		"vite": "^2.3.2",
-		"vite-plugin-eslint": "^1.3.0",
-		"vite-plugin-svgr": "^0.3.0"
-	},
-	"dependencies": {
 		"@mongosh/async-rewriter2": "^1.0.5",
 		"@mongosh/shell-api": "^1.0.5",
 		"@mongosh/service-provider-server": "^1.0.5",
-		"electron-json-storage": "^4.5.0"
+		"electron-json-storage": "^4.5.0",
+		"nanoid": "^3.1.23",
+		"mongodb": "^4.0.1"
 	}
 }
