--- a/package.json
+++ b/package.json
@@ -106,6 +106,9 @@
 	"dependencies": {
 		"@ant-design/icons": "^4.6.2",
 		"@monaco-editor/react": "^4.2.1",
+		"@mongosh/async-rewriter2": "^1.0.5",
+		"@mongosh/service-provider-server": "^1.0.5",
+		"@mongosh/shell-api": "^1.0.5",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
@@ -115,22 +118,20 @@
 		"@types/node": "^12.20.16",
 		"@types/react": "^17.0.14",
 		"@types/react-dom": "^17.0.9",
+		"ansi-to-html": "^0.7.1",
 		"antd": "^4.16.8",
 		"concurrently": "^6.2.0",
 		"defaults": "^1.0.3",
+		"electron-json-storage": "^4.5.0",
 		"monaco-editor": "^0.26.1",
+		"mongodb": "^4.0.1",
+		"nanoid": "^3.1.23",
 		"prettier": "^2.3.2",
 		"re-resizable": "^6.9.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.3.5",
-		"@mongosh/async-rewriter2": "^1.0.5",
-		"@mongosh/shell-api": "^1.0.5",
-		"@mongosh/service-provider-server": "^1.0.5",
-		"electron-json-storage": "^4.5.0",
-		"nanoid": "^3.1.23",
-		"mongodb": "^4.0.1"
+		"typescript": "^4.3.5"
 	}
 }
