refactor: Wiring of shell and connection manager.

--- a/src/json-stubs/shell-config.json
+++ b/src/json-stubs/shell-config.json
@@ -1,8 +1,11 @@
 {
-	"uri": "mongodb://localhost:27017",
-	"db": "test_database",
-	"hosts": ["localhost"],
-	"user": "test",
-	"password": "test",
+	"uri": "mongodb://admin:klenty123$@ec2-3-13-197-203.us-east-2.compute.amazonaws.com:27017/klenty_test_8?authSource=admin",
+	"db": "klenty_test_8",
+	"hosts": [
+		"ec2-3-13-197-203.us-east-2.compute.amazonaws.com",
+		"ec2-3-13-197-203.us-east-2.compute.amazonaws.com"
+	],
+	"user": "admin",
+	"password": "klenty123$",
 	"collection": "userdetails"
 }
