--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
 		"re-resizable": "^6.9.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-hotkeys-hook": "^3.4.1",
 		"react-icons": "^4.2.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.3.5"
