--- a/package.json
+++ b/package.json
@@ -86,6 +86,10 @@
 		}
 	},
 	"devDependencies": {
+		"@types/tunnel-ssh": "^4.1.1",
+		"@typescript-eslint/eslint-plugin": "^4.28.4",
+		"@typescript-eslint/parser": "^4.28.4",
+		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"electron": "^13.1.7",
 		"electron-builder": "^22.11.7",
 		"eslint": "^7.31.0",
@@ -96,9 +100,6 @@
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"less": "3.0.0",
 		"less-vars-to-js": "^1.3.0",
-		"@typescript-eslint/eslint-plugin": "^4.28.4",
-		"@typescript-eslint/parser": "^4.28.4",
-		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"vite": "^2.3.2",
 		"vite-plugin-eslint": "^1.3.0",
 		"vite-plugin-svgr": "^0.3.0"
@@ -135,6 +136,7 @@
 		"react-hotkeys-hook": "^3.4.1",
 		"react-icons": "^4.2.0",
 		"rimraf": "^3.0.2",
+		"tunnel-ssh": "^4.1.6",
 		"typescript": "^4.3.5"
 	}
 }
