--- a/package.json
+++ b/package.json
@@ -107,9 +107,9 @@
 	"dependencies": {
 		"@ant-design/icons": "^4.6.2",
 		"@monaco-editor/react": "^4.2.1",
-		"@mongosh/async-rewriter2": "^1.0.5",
-		"@mongosh/service-provider-server": "^1.0.5",
-		"@mongosh/shell-api": "^1.0.5",
+		"@mongosh/async-rewriter2": "~1.1.1",
+		"@mongosh/service-provider-server": "~1.1.1",
+		"@mongosh/shell-api": "~1.1.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
@@ -127,7 +127,7 @@
 		"defaults": "^1.0.3",
 		"electron-json-storage": "^4.5.0",
 		"monaco-editor": "^0.26.1",
-		"mongodb": "^4.0.1",
+		"mongodb": "~4.1.3",
 		"mongodb-uri": "^0.9.7",
 		"nanoid": "^3.1.23",
 		"prettier": "^2.3.2",
