refactor: common utils  directory for client and electron

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -11,8 +11,5 @@
 		"isolatedModules": true
 		// "noEmit": false
 	},
-	"include": [
-		"./**/*.ts",
-		"../global.d.ts"
-	]
+	"include": ["./**/*.ts", "../global.d.ts", "../util/**/*.ts"]
 }
