--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,7 @@
 {
 	"compilerOptions": {
-		"lib": [
-			"dom",
-			"dom.iterable",
-			"esnext"
-		],
-		"types": [
-			"vite/client",
-			"vite-plugin-svgr/client"
-		],
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"types": ["vite/client", "vite-plugin-svgr/client"],
 		"target": "es2020",
 		"module": "ESNext",
 		"strict": true,
@@ -21,11 +14,6 @@
 		"jsx": "react",
 		"noImplicitAny": false
 	},
-	"include": [
-		"src",
-		"./global.d.ts"
-	],
-	"exclude": [
-		"src/mongoshell.d.ts"
-	]
+	"include": ["src", "./global.d.ts", "util"],
+	"exclude": ["src/mongoshell.d.ts"]
 }
