--- a/package.json
+++ b/package.json
@@ -86,8 +86,9 @@
 		}
 	},
 	"devDependencies": {
-		"@types/tunnel-ssh": "^4.1.1",
+		"@blueprintjs/core": "^3.52.0",
 		"@types/mongodb-uri": "^0.9.1",
+		"@types/tunnel-ssh": "^4.1.1",
 		"@typescript-eslint/eslint-plugin": "^4.28.4",
 		"@typescript-eslint/parser": "^4.28.4",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
