--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"pack": "electron-builder --dir",
 		"dist:macos": "electron-builder --macos",
 		"dist:linux": "electron-builder --linux",
-		"dist:windows": "electron-builder --windows"
+		"dist:windows": "electron-builder --windows",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"browserslist": {
 		"production": [
@@ -86,12 +88,21 @@
 		}
 	},
 	"devDependencies": {
+		"@babel/core": "^7.17.0",
 		"@blueprintjs/core": "^3.52.0",
+		"@storybook/addon-actions": "^6.4.18",
+		"@storybook/addon-essentials": "^6.4.18",
+		"@storybook/addon-links": "^6.4.18",
+		"@storybook/builder-webpack5": "^6.4.18",
+		"@storybook/manager-webpack5": "^6.4.18",
+		"@storybook/react": "^6.4.18",
 		"@types/mongodb-uri": "^0.9.1",
 		"@types/tunnel-ssh": "^4.1.1",
 		"@typescript-eslint/eslint-plugin": "^4.28.4",
 		"@typescript-eslint/parser": "^4.28.4",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
+		"babel-loader": "^8.2.3",
+		"css-loader": "^6.6.0",
 		"electron": "^13.1.7",
 		"electron-builder": "^22.11.7",
 		"eslint": "^7.31.0",
@@ -101,10 +112,13 @@
 		"eslint-plugin-react": "^7.24.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"less": "3.0.0",
+		"less-loader": "^10.2.0",
 		"less-vars-to-js": "^1.3.0",
+		"style-loader": "^3.3.1",
 		"vite": "^2.3.2",
 		"vite-plugin-eslint": "^1.3.0",
-		"vite-plugin-svgr": "^0.3.0"
+		"vite-plugin-svgr": "^0.3.0",
+		"webpack": "^5.68.0"
 	},
 	"dependencies": {
 		"@ant-design/icons": "^4.6.2",
