--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
 		"concurrently": "^6.2.0",
 		"defaults": "^1.0.3",
 		"electron-json-storage": "^4.5.0",
+		"jstz": "^2.1.1",
 		"monaco-editor": "^0.26.1",
 		"mongodb": "~4.1.3",
 		"mongodb-uri": "^0.9.7",
