--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
 		"@blueprintjs/core": "^3.52.0",
+		"@blueprintjs/popover2": "^0.13.0",
 		"@storybook/addon-actions": "^6.4.18",
 		"@storybook/addon-essentials": "^6.4.18",
 		"@storybook/addon-links": "^6.4.18",
@@ -123,6 +124,7 @@
 	},
 	"dependencies": {
 		"@ant-design/icons": "^4.6.2",
+		"@blueprintjs/icons": "^3.32.0",
 		"@monaco-editor/react": "^4.2.1",
 		"@mongosh/async-rewriter2": "~1.1.1",
 		"@mongosh/service-provider-server": "~1.1.1",
