--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
 		"@blueprintjs/core": "^3.52.0",
+		"@blueprintjs/datetime": "^3.23.20",
 		"@blueprintjs/popover2": "^0.13.0",
+		"@blueprintjs/select": "^3.18.12",
 		"@storybook/addon-actions": "^6.4.18",
 		"@storybook/addon-essentials": "^6.4.18",
 		"@storybook/addon-links": "^6.4.18",
