feat(ResultViewer): TreeViewer progress

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,13 @@
             "isBackground": true,
             "type": "npm",
             "script": "build:react",
-            "label": "Run vite",
+            "label": "Run:vite-dev-server",
+        },
+        {
+            "isBackground": true,
+            "type": "npm",
+            "script": "build:electron",
+            "label": "Run:electron-watcher",
         }
     ]
 }
