--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
             "runtimeArgs": [
                 ".",
-                "--remote-debugging-port=9222",
+                "--remote-debugging-port=9223",
                 "--enable-logging",
             ],
             "skipFiles": [
@@ -30,15 +30,15 @@
                 "ARK_ENTRY_URL": "http://localhost:3000",
                 "BROWSER": "none"
             },
-            "type": "pwa-node"
+            "type": "pwa-node",
         },
         {
             "name": "Electron: Renderer",
             "type": "pwa-chrome",
-            "preLaunchTask": "Run vite",
+            "preLaunchTask": "Run:vite-dev-server",
             "request": "attach",
-            "port": 9222,
-            "timeout": 20000,
+            "port": 9223,
+            "timeout": 30000,
             "webRoot": "${workspaceFolder}",
         }
     ]
