--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,14 @@ jobs:
           name: "Build electron & react"
           command: "npm run build"
       - run:
-          name: "Build distributable"
-          command: "npm run dist:linux"
+          name: "Build AppImage"
+          command: "npm run dist:app_image"
+      - run:
+          name: "Build deb"
+          command: "npm run dist:deb"
       - run:
           name: "Move necessary build output"
-          command: "mkdir -p /tmp/release && mv ./release/*.AppImage /tmp/release"
+          command: "mkdir -p /tmp/release && mv ./release/*.AppImage ./release/*.deb /tmp/release"
       - store_artifacts:
           path: /tmp/release
 
