--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
 	"dependencies": {
 		"@ant-design/icons": "^4.6.2",
 		"@blueprintjs/icons": "^3.32.0",
+		"@blueprintjs/table": "^4.2.0",
 		"@monaco-editor/react": "^4.2.1",
 		"@mongosh/async-rewriter2": "~1.1.1",
 		"@mongosh/service-provider-server": "~1.1.1",
