--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.29.4",
 		"eslint-plugin-react-hooks": "^4.5.0",
+		"framer-motion": "^6.3.11",
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
 		"less-vars-to-js": "^1.3.0",
@@ -171,8 +172,6 @@
 		"prettier": "^2.6.2",
 		"re-resizable": "^6.9.9",
 		"react": "^18.1.0",
-		"react-dnd": "^14.0.5",
-		"react-dnd-html5-backend": "^14.1.0",
 		"react-dom": "^18.1.0",
 		"react-hotkeys-hook": "^3.4.4",
 		"react-icons": "^4.3.1",
