--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
 		"@types/react-dom": "^18.0.3",
 		"ansi-to-html": "^0.7.2",
 		"antd": "^4.20.2",
+		"axios": "^0.27.2",
 		"bluebird": "^3.7.2",
 		"bson": "^4.6.3",
 		"concurrently": "^7.1.0",
