--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -8,15 +8,10 @@
 		"sourceMap": true,
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
-		"isolatedModules": true
+		"isolatedModules": true,
+		"downlevelIteration": true
 		// "noEmit": false
 	},
-	"include": [
-		"./**/*.ts",
-		"../global.d.ts",
-		"../util/**/*.ts"
-	],
-	"exclude": [
-		"../node_modules/**"
-	]
+	"include": ["./**/*.ts", "../global.d.ts", "../util/**/*.ts"],
+	"exclude": ["../node_modules/**"]
 }
