feat(Titlebar): Options redesign and script open fixes.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		]
 	},
 	"build": {
-		"productName": "Ark",
+		"productName": "ark",
 		"appId": "dev.wheredevs.Ark",
 		"extends": null,
 		"files": [
