--- a/package.json
+++ b/package.json
@@ -138,7 +138,18 @@
 		"vite": "^2.9.9",
 		"vite-plugin-eslint": "^1.6.0",
 		"vite-plugin-svgr": "^2.1.0",
-		"webpack": "^5.72.0"
+		"webpack": "^5.72.0",
+		"concurrently": "^7.1.0",
+		"rimraf": "^3.0.2",
+		"typescript": "^4.6.4",
+		"@types/electron-json-storage": "^4.5.0",
+		"@types/jest": "^27.5.0",
+		"@types/node": "^16.11.33",
+		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18.0.3",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.2.0",
+		"@testing-library/user-event": "^14.1.1"
 	},
 	"dependencies": {
 		"@blueprintjs/icons": "^4.2.5",
@@ -147,22 +158,10 @@
 		"@mongosh/service-provider-core": "~1.3.1",
 		"@mongosh/service-provider-server": "~1.3.1",
 		"@mongosh/shell-api": "~1.3.1",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.2.0",
-		"@testing-library/user-event": "^14.1.1",
-		"@types/defaults": "^1.0.3",
-		"@types/electron-json-storage": "^4.5.0",
-		"@types/jest": "^27.5.0",
-		"@types/node": "^16.11.33",
-		"@types/react": "^18.0.9",
-		"@types/react-dom": "^18.0.3",
-		"ansi-to-html": "^0.7.2",
 		"axios": "^0.27.2",
 		"bluebird": "^3.7.2",
 		"bson": "^4.6.3",
-		"concurrently": "^7.1.0",
 		"dayjs": "^1.11.2",
-		"defaults": "^1.0.3",
 		"electron-json-storage": "^4.5.0",
 		"monaco-editor": "0.31",
 		"mongodb": "^4.6.0",
@@ -174,8 +173,6 @@
 		"react-dom": "^18.1.0",
 		"react-hotkeys-hook": "^3.4.4",
 		"react-icons": "^4.3.1",
-		"rimraf": "^3.0.2",
-		"tunnel-ssh": "^4.1.6",
-		"typescript": "^4.6.4"
+		"tunnel-ssh": "^4.1.6"
 	}
 }
