--- a/package.json
+++ b/package.json
@@ -115,12 +115,21 @@
 		"@storybook/builder-webpack5": "^6.5.9",
 		"@storybook/manager-webpack5": "^6.5.9",
 		"@storybook/react": "^6.5.9",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.2.0",
+		"@testing-library/user-event": "^14.1.1",
+		"@types/electron-json-storage": "^4.5.0",
+		"@types/jest": "^27.5.0",
 		"@types/mongodb-uri": "^0.9.1",
+		"@types/node": "^16.11.33",
+		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18.0.3",
 		"@types/tunnel-ssh": "^4.1.1",
 		"@typescript-eslint/eslint-plugin": "^5.22.0",
 		"@typescript-eslint/parser": "^5.22.0",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"babel-loader": "^8.2.5",
+		"concurrently": "^7.1.0",
 		"css-loader": "^6.7.1",
 		"electron": "^18.2.3",
 		"electron-builder": "^23.0.3",
@@ -134,22 +143,14 @@
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
 		"less-vars-to-js": "^1.3.0",
+		"rimraf": "^3.0.2",
 		"style-loader": "^3.3.1",
+		"typescript": "^4.6.4",
 		"vite": "^3.0.4",
 		"vite-plugin-eslint": "^1.7.0",
 		"vite-plugin-svgr": "^2.2.1",
 		"webpack": "^5.72.0",
-		"concurrently": "^7.1.0",
-		"rimraf": "^3.0.2",
-		"typescript": "^4.6.4",
-		"@types/electron-json-storage": "^4.5.0",
-		"@types/jest": "^27.5.0",
-		"@types/node": "^16.11.33",
-		"@types/react": "^18.0.9",
-		"@types/react-dom": "^18.0.3",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.2.0",
-		"@testing-library/user-event": "^14.1.1"
+		"prettier": "^2.6.2"
 	},
 	"dependencies": {
 		"@blueprintjs/icons": "^4.2.5",
@@ -167,12 +168,10 @@
 		"mongodb": "^4.6.0",
 		"mongodb-uri": "^0.9.7",
 		"nanoid": "^3.3.4",
-		"prettier": "^2.6.2",
 		"re-resizable": "^6.9.9",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"react-hotkeys-hook": "^3.4.4",
-		"react-icons": "^4.3.1",
 		"tunnel-ssh": "^4.1.6"
 	},
 	"optionalDependencies": {
