--- a/package.json
+++ b/package.json
@@ -143,16 +143,17 @@
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
 		"less-vars-to-js": "^1.3.0",
+		"prettier": "^2.6.2",
 		"rimraf": "^3.0.2",
 		"style-loader": "^3.3.1",
 		"typescript": "^4.6.4",
 		"vite": "^3.0.4",
 		"vite-plugin-eslint": "^1.7.0",
 		"vite-plugin-svgr": "^2.2.1",
-		"webpack": "^5.72.0",
-		"prettier": "^2.6.2"
+		"webpack": "^5.72.0"
 	},
 	"dependencies": {
+		"@blueprintjs/datetime2": "^0.5.1",
 		"@blueprintjs/icons": "^4.2.5",
 		"@monaco-editor/react": "^4.4.5",
 		"@mongosh/async-rewriter2": "~1.3.1",
