--- a/package.json
+++ b/package.json
@@ -150,12 +150,17 @@
 		"vite": "^3.0.4",
 		"vite-plugin-eslint": "^1.7.0",
 		"vite-plugin-svgr": "^2.2.1",
-		"webpack": "^5.72.0"
-	},
-	"dependencies": {
+		"webpack": "^5.72.0",
+		"@monaco-editor/react": "^4.4.5",
+		"monaco-editor": "0.31",
 		"@blueprintjs/datetime2": "^0.5.1",
 		"@blueprintjs/icons": "^4.2.5",
-		"@monaco-editor/react": "^4.4.5",
+		"re-resizable": "^6.9.9",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-hotkeys-hook": "^3.4.4"
+	},
+	"dependencies": {
 		"@mongosh/async-rewriter2": "~1.3.1",
 		"@mongosh/service-provider-core": "~1.3.1",
 		"@mongosh/service-provider-server": "~1.3.1",
@@ -165,14 +170,9 @@
 		"bson": "^4.6.3",
 		"dayjs": "^1.11.2",
 		"electron-json-storage": "^4.5.0",
-		"monaco-editor": "0.31",
 		"mongodb": "^4.6.0",
 		"mongodb-uri": "^0.9.7",
 		"nanoid": "^3.3.4",
-		"re-resizable": "^6.9.9",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
-		"react-hotkeys-hook": "^3.4.4",
 		"tunnel-ssh": "^4.1.6"
 	},
 	"optionalDependencies": {
