--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"build": {
 		"productName": "ark",
-		"appId": "dev.wheredevs.Ark",
+		"appId": "dev.makeark.ark",
 		"extends": null,
 		"files": [
 			"./build/**/*",
@@ -161,10 +161,10 @@
 		"react-hotkeys-hook": "^3.4.4"
 	},
 	"dependencies": {
-		"@mongosh/async-rewriter2": "~1.3.1",
-		"@mongosh/service-provider-core": "~1.3.1",
-		"@mongosh/service-provider-server": "~1.3.1",
-		"@mongosh/shell-api": "~1.3.1",
+		"@mongosh/async-rewriter2": "~1.5.4",
+		"@mongosh/service-provider-core": "~1.5.4",
+		"@mongosh/service-provider-server": "~1.5.4",
+		"@mongosh/shell-api": "~1.5.4",
 		"axios": "^0.27.2",
 		"bluebird": "^3.7.2",
 		"bson": "^4.6.3",
