--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
           name: "Build electron & react"
           command: "npm run build"
       - run:
+          name: "Cleanup"
+          command: "npm prune --production"
+      - run:
           name: "Build AppImage"
           command: "npm run dist:app_image"
       - run:
