--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: "npm run build"
       - run:
           name: "Cleanup"
-          command: "npm prune --production"
+          command: "npm prune --production && npm i -g electron-builder"
       - run:
           name: "Build AppImage"
           command: "npm run dist:app_image"
