--- a/package.json
+++ b/package.json
@@ -106,10 +106,12 @@
 	"devDependencies": {
 		"@babel/core": "^7.17.10",
 		"@blueprintjs/core": "^4.3.0",
-		"@blueprintjs/popover2": "^1.3.0",
-		"@blueprintjs/select": "^4.2.0",
+		"@blueprintjs/datetime": "^4.3.5",
 		"@blueprintjs/datetime2": "^0.5.1",
 		"@blueprintjs/icons": "^4.2.5",
+		"@blueprintjs/popover2": "^1.3.0",
+		"@blueprintjs/select": "^4.2.0",
+		"@monaco-editor/react": "^4.4.5",
 		"@storybook/addon-actions": "^6.5.9",
 		"@storybook/addon-essentials": "^6.5.9",
 		"@storybook/addon-links": "^6.5.9",
@@ -132,6 +134,7 @@
 		"babel-loader": "^8.2.5",
 		"concurrently": "^7.1.0",
 		"css-loader": "^6.7.1",
+		"electron": "^18.2.3",
 		"electron-builder": "^23.0.3",
 		"eslint": "^8.15.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -143,21 +146,19 @@
 		"less": "^4.1.2",
 		"less-loader": "^10.2.0",
 		"less-vars-to-js": "^1.3.0",
+		"monaco-editor": "0.31",
 		"prettier": "^2.6.2",
+		"re-resizable": "^6.9.9",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"react-hotkeys-hook": "^3.4.4",
 		"rimraf": "^3.0.2",
 		"style-loader": "^3.3.1",
 		"typescript": "^4.6.4",
 		"vite": "^3.0.4",
 		"vite-plugin-eslint": "^1.7.0",
 		"vite-plugin-svgr": "^2.2.1",
-		"webpack": "^5.72.0",
-		"@monaco-editor/react": "^4.4.5",
-		"monaco-editor": "0.31",
-		"re-resizable": "^6.9.9",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
-		"react-hotkeys-hook": "^3.4.4",
-		"electron": "^18.2.3"
+		"webpack": "^5.72.0"
 	},
 	"dependencies": {
 		"@mongosh/async-rewriter2": "~1.5.4",
