Fixes to config.yml for package.json

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,9 @@ jobs:
     docker:
       - image: cibuilds/github:0.10
     steps:
+      - checkout
       - attach_workspace:
-          at: ./artifacts
+          at: /tmp/release
       - run:
           name: "Publish Release on GitHub"
           command: |
